--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "Tal Atlas (https://github.com/tal)"
   ],
   "devDependencies": {
-    "@types/jest": "24.0.13",
-    "expect-more-jest": "2.4.1",
+    "@types/jest": "24.0.16",
+    "expect-more-jest": "2.4.2",
     "jest": "24.8.0",
-    "prettier": "1.17.1",
+    "prettier": "1.18.2",
     "rimraf": "2.6.3",
     "ts-jest": "24.0.2",
-    "tslint": "5.17.0",
-    "typescript": "3.5.1"
+    "tslint": "5.18.0",
+    "typescript": "3.5.3"
   },
   "files": [
     "dist"
@@ -25,6 +25,9 @@
   "license": "MIT",
   "main": "dist/get-time-between.js",
   "repository": "JamieMason/get-time-between",
+  "resolutions": {
+    "lodash": ">=4.17.15"
+  },
   "scripts": {
     "build": "tsc --project .",
     "format": "prettier --write '**/*.md' './src/**/*.ts'",
