--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "build": "tsc --project .",
-    "format": "prettier --write '**/*.md' './src/**/*.ts'",
+    "format": "prettier --write './src/**/*.ts'",
     "lint": "tslint --fix --project ./tsconfig.json",
     "prebuild": "rimraf dist",
     "prelint": "npm run format",
